# proficio_working

./: .gitignore  CMakeCache.txt  CMakeCache.txt~  CMakeLists.txt  CMakeLists.txt~  CustomClass.h  Makefile  README.md  ballisticForce.h  ballisticPlane.h  build_message_defs.sh  build_message_defs.sh~  burtRTMA.h  burtRTMA.h.old  burtRecovery.h  cmake_install.cmake  haptic_world.h  hapticsDemoClass.h  helpers.h  logger.txt  makeColorful.sh  movingBurt.h  params.h  proficio_2dBalistic.cpp  proficio_2dBalistic.cpp~  proficio_2dBalistic.h  proficio_2dBalistic_MODIFYING_OLD.cpp  proficio_2dBalistic_experiment.cpp  proficio_2dBalistic_simpleold.cpp  recordTrajectory.cpp  recordTrajectory.h  target_polygon.h  target_polygon.h~  target_practice.cpp  wam_2dBalistic.cpp  wam_2dBalistic.h  wam_2dBallistic.cpp
WAM_OffLineTesting/: CMakeLists.txt  CustomController.cpp
matlab_Analysis/: importWAM.m  sysID_point.m  sysID_point.m~
matlab_Analysis/WAM_dataFiles/: wam4.conf  wam_4dof.urdf
